# sol-lightnode

./: .gitmodules  Cargo.toml  readme.md
src/: main.rs
