[package]
name = "vote"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.14.1", features = ["full"] }
bincode = "1.3.3"
bs58 = "0.4.0"
reqwest = "0.11.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
solana-account-decoder = { path = "solana/account-decoder" }
solana-client =  { path = "solana/client" }
solana-sdk =  { path = "solana/sdk" }
solana-transaction-status =  { path = "solana/transaction-status" }
solana-entry =  { path = "solana/entry" }
solana-rpc =  { path = "solana/rpc" }
